--- a/src/sass/components/Header/_headerNav.sass
+++ b/src/sass/components/Header/_headerNav.sass
@@ -165,7 +165,7 @@
                     font-size: $fs-14
                     text-align: end
                     margin-top: 15px
-                    margin-left: -8px
+                    margin-left: -10px
 
             &__link
                 font-size: $fs-12
